syntax = "proto3";

package interchain_security.bridge;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "interchain_security/bridge/params.proto";

option go_package = "github.com/cosmos/interchain-security/v5/x/bridge/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/interchain_security/bridge/params";
  
  }

  // TestQuery returns a test string "node101"
  rpc TestQuery (QueryTestRequest) returns (QueryTestResponse) {
    option (google.api.http).get = "/interchain_security/bridge/test";
  }
  
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// QueryTestRequest is request type for the Query/TestQuery RPC method.
message QueryTestRequest {}

// QueryTestResponse is response type for the Query/TestQuery RPC method.
message QueryTestResponse {
  // result holds the test string
  string result = 1;
}
